--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential clang flex g++ gawk gcc-multilib gettext git libncurses-dev libssl-dev python3 python3-distutils rsync unzip zlib1g-dev
+        sudo apt-get install -y build-essential clang flex g++ gawk gcc-multilib gettext git libncurses-dev libssl-dev python3 python3-dev python3-lib2to3 rsync unzip zlib1g-dev
 
     # 步骤 3：克隆 OpenWrt 源码
     - name: Clone OpenWrt source
